@@ -12,6 +12,9 @@ Version 1.11.0+svn:
    * The recruit and recall commands are restored when right-clicking on a
      leader, but with new semantics -- only that leader's recruits/recalls will
      be presented as options.
+ * WML engine:
+   * The recall, recruit, prerecall, and prerecruit events will now block
+     undoing unless they contain [allow_undo].
  * Miscellaneous and bug fixes:
    * Fix invalid memory access crash resulting from deleting all saved games
      in the Load Game dialog
